# x16-emulator

./: CMakeLists.txt  audio.c  debugger.c  disasm.c  glue.h  loadsave.c  main.c  memory.c  rendertext.c  rendertext.h  script.cpp  utf8.h  video.c  video.h
cpu/: fake6502.c  instructions.h  mnemonics.h  tables.h
